# system-deps

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
binary/: Cargo.toml  build.rs
binary/src/: lib.rs
meta/: Cargo.toml  build.rs
meta/src/: binary.rs  error.rs  lib.rs  parse.rs  test.rs  utils.rs
meta/src/test/: binary.rs  conditional.rs  metadata.rs
meta/src/tests/a/: Cargo.toml
meta/src/tests/main/: Cargo.toml
src/: lib.rs  metadata.rs  test.rs  test_binary.rs
src/tests/: test.tar.xz  testlib64.pc  testlinkfiles.pc
src/tests/toml-cfg-in-dep/: Cargo.toml
src/tests/toml-fallback-names/: Cargo.toml
src/tests/toml-feature-not-string/: Cargo.toml
src/tests/toml-feature-versions/: Cargo.toml
src/tests/toml-good/: Cargo.toml
src/tests/toml-invalid-cfg/: Cargo.toml
src/tests/toml-link-files/: Cargo.toml
src/tests/toml-missing-key/: Cargo.toml
src/tests/toml-not-table/: Cargo.toml
src/tests/toml-optional/: Cargo.toml
src/tests/toml-os-specific/: Cargo.toml
src/tests/toml-override-name/: Cargo.toml
src/tests/toml-rpath/: Cargo.toml
src/tests/toml-static/: Cargo.toml
src/tests/toml-static-mod/: Cargo.toml
src/tests/toml-testlib64/: Cargo.toml
src/tests/toml-two-libs/: Cargo.toml
src/tests/toml-unexpected-key/: Cargo.toml
src/tests/toml-version-fallback-names/: Cargo.toml
src/tests/toml-version-in-table-not-string/: Cargo.toml
src/tests/toml-version-missing/: Cargo.toml
src/tests/toml-version-names/: Cargo.toml
src/tests/toml-version-not-string/: Cargo.toml
src/tests/toml-version-range/: Cargo.toml
src/tests/toml-version-range-unsatisfied/: Cargo.toml
src/tests/uninstalled/: info.toml
src/tests/uninstalled/lib/pkgconfig/: test.pc
