[workspace]
members = [ "meta" ]
exclude = [ "target" ]

[workspace.package]
version = "7.0.3"
authors = [
    "Guillaume Desmottes <guillaume.desmottes@collabora.com>",
    "Josh Triplett <josh@joshtriplett.org>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gdesmott/system-deps"
description = "Discover and configure system dependencies from declarative dependencies in Cargo.toml"
keywords = [
    "pkg-config",
    "build-dependencies",
    "build-depends",
    "manifest",
    "metadata",
]
edition = "2018"
documentation = "https://docs.rs/system-deps/"

[workspace.dependencies]
system-deps-meta = { path = "./meta" }

[package]
name = "system-deps"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
pkg-config = "0.3.25"
toml = { version = "0.8", default-features = false, features = ["parse"] }
version-compare = "0.2"
heck = "0.5"
cfg-expr = { version = "0.17", features = ["targets"] }

[build-dependencies]
system-deps-meta = { workspace = true, optional = true }

[dev-dependencies]
itertools = "0.13"
assert_matches = "1.5"

[features]
default = [ ]
binary = [ "system-deps-meta/binary" ]
gx = [ "system-deps-meta/gz" ]
xz = [ "system-deps-meta/xz" ]
zip = [ "system-deps-meta/zip" ]
