[package]
name = "system-deps-binary"
version = "0.1.0"
edition = "2021"
links = "system-deps-binary"

[build-dependencies]
system-deps-meta = { path = "../meta" }
serde = { version = "1.0", features = ["derive"] }
sha256 = { version = "1.5" }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
flate2 = { version = "1.0", optional = true }
xz = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2.2", optional = true }
apple-flat-package = { version = "0.19", optional = true }

[features]
default = [ "web" ]
web = [ "dep:reqwest" ]
gz = [ "dep:flate2", "dep:tar" ]
xz = [ "dep:xz", "dep:tar" ]
zip = [ "dep:zip" ]
pkg = [ "dep:apple-flat-package" ]
