[package]
name = "system-deps-meta"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.18"
# Metadata
serde_json = "1.0"
serde = "1.0"
cfg-expr = { version = "0.17", features = ["targets"] }
# Binary
sha256 = { version = "1.5" }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
flate2 = { version = "1.0", optional = true }
xz = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2.2", optional = true }
apple-flat-package = { version = "0.19", optional = true }

[dev-dependencies]
toml = "0.8"

[features]
default = [ "web" ]
binary = [ ]
web = [ "dep:reqwest" ]
gz = [ "dep:flate2", "dep:tar" ]
xz = [ "dep:xz", "dep:tar" ]
zip = [ "dep:zip" ]
pkg = [ "dep:apple-flat-package" ]
