[package]
name = "system-deps-meta"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
cargo_metadata = "0.19"
serde = "1.0"
toml = "0.8"
cfg-expr = { version = "0.17", features = ["targets"] }
sha256 = { version = "1.5", optional = true }
attohttpc = { version = "0.28", optional = true }
flate2 = { version = "1.0", optional = true }
xz = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2.2", optional = true }

[features]
binary = [ "dep:sha256", "dep:attohttpc" ]
gz = [ "dep:flate2", "dep:tar" ]
xz = [ "dep:xz", "dep:tar" ]
zip = [ "dep:zip" ]
test = [ ]
